# emotion_detection

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 02_data_overview.ipynb  03_exploratory_analysis.ipynb  04_data_cleaning.ipynb  05_tokenization_embedding.ipynb  06_train_test_split.ipynb  07_baseline_models.ipynb  08_deep_learning_models.ipynb  09_model_evaluation.ipynb  10_hyperparameter_tuning.ipynb  11_model_deployment.ipynb  12_multimodal_or_advanced.ipynb
src/: data_loader.py
